Fix contact spacing

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,5 +1,4 @@
 
-$column-gap: 1.0em;
 
 @import "../../../node_modules/bulma/bulma";
 
