--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,8 +6,5 @@
 $family-sans-serif: "Nunito", sans-serif;
 $card-shadow: 0 4px 6px 0 hsla(0, 0, 0, 0.2); 
 
-body {
-    margin: 0;
-}
 
 @import '../node_modules/bulma/bulma';
